=======
CHANGES
=======

3.9.1 (unreleased)
------------------

- TBD


3.9.0 (2010-05-17)
------------------

- LP #568806: Update dependency ``mechanize >= 0.2.0``, which now includes
  the ``ClientForm`` APIs.  Remove use of ``urllib2`` APIs (incompatible
  with ``mechanize 0.2.0``) in favor of ``mechanize`` equivalents.
  Thanks to John J. Lee for the patch.

- Use stdlib ``doctest`` module, instead of ``zope.testing.doctest``.


3.8.1 (2010-04-19)
------------------

- Pinned dependency on mechanize to prevent use of the upcoming
  0.2.0 release before we have time to adjust to its API changes.

- LP #98396:  testbrowser resolves relative URLs incorrectly.


3.8.0 (2010-03-05)
------------------

- Added ``follow`` convenience method which gets and follows a link.


3.7.0 (2009-12-17)
------------------

- Moved zope.app.testing dependency into the scope of the PublisherConnection
  class. Zope2 specifies its own PublisherConnection which isn't dependent on
  zope.app.testing.

- Fixed LP #419119: return None when the browser has no contents instead of
  raising an exception.


3.7.0a1 (2009-08-29)
--------------------

- Remove dependency on zope.app.publisher in favor of zope.browserpage,
  zope.browserresource and zope.ptresource.

- Remove dependencies on zope.app.principalannotation and zope.securitypolicy
  by using the simple PermissiveSecurityPolicy. We aren't testing security
  in our tests.

- Replaced the testing dependency on zope.app.zcmlfiles with explicit
  dependencies of a minimal set of packages.

- Remove unneeded zope.app.authentication from ftesting.zcml.

- Test dependency on zope.securitypolicy instead of its app variant.


3.6.0a2 (2009-01-31)
--------------------

- Test dependency on zope.site.folder instead of zope.app.folder.

- Remove useless test dependency in zope.app.component.


3.6.0a1 (2009-01-08)
--------------------

- Author e-mail to zope-dev rather than zope3-dev.
